# multi-agent-clinical-decision-support-system

./: Dockerfile  README.md  example_output.md  pyproject.toml
src/multiagent_clinicaldecisionsupport/: crew.py  main.py
src/multiagent_clinicaldecisionsupport/config/: agents.yaml  tasks.yaml
src/multiagent_clinicaldecisionsupport/models/: gguf_llm.py  transformer_llm.py
src/multiagent_clinicaldecisionsupport/tools/: pubmed.py
