[project]
name = "multiagent_clinicaldecisionsupport"
version = "0.1.0"
description = "Multi Agent Clinical Decision Support System with Explainable Dialogue"
authors = [{ name = "Salih Furkan Erik", email = "slhfurkaan@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0",
    "hf-xet>=1.1.5",
    "mcp>=1.13.0",
    "torch>=2.8.0",
    "transformers>=4.46.3",
    "xmltodict>=0.14.2",
    "accelerate>=0.26.0"
]

[project.scripts]
multiagent_clinicaldecisionsupport = "multiagent_clinicaldecisionsupport.main:run"
run_crew = "multiagent_clinicaldecisionsupport.main:run"
train = "multiagent_clinicaldecisionsupport.main:train"
replay = "multiagent_clinicaldecisionsupport.main:replay"
test = "multiagent_clinicaldecisionsupport.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
